force-app/main/default/objects/HFS_Job__c/HFS_Job__c.object-meta.xml
<CustomObject>
    <description>A junction object between User and Case_Item__c that will record all of the jobs of HFS Experiences.</description>
    <label>HFS Job</label>
    <nameField>
        <displayFormat>J-{00000000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HFS Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>