force-app/main/default/objects/HFS_Job__c/fields/Accept_Job__c.field-meta.xml
<CustomField>
    <fullName>Accept_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Job</label>
    <type>Checkbox</type>
</CustomField>