force-app/main/default/objects/HFS_Job__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <label>Accepted</label>
    <type>DateTime</type>
</CustomField>