force-app/main/default/objects/HFS_Job__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <label>Accepted By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>