force-app/main/default/objects/HFS_Job__c/fields/Accepted_Time__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Time__c</fullName>
    <description>How long the job was in Status = Accepted.</description>
    <formula>NULLVALUE((Started__c - Accepted__c )*86400,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time (in seconds)</inlineHelpText>
    <label>Accepted Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>