force-app/main/default/objects/HFS_Job__c/fields/Arrived_Storage_Point__c.field-meta.xml
<CustomField>
    <fullName>Arrived_Storage_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrived at Storage Point</label>
    <type>Checkbox</type>
</CustomField>