force-app/main/default/objects/HFS_Job__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <label>Assigned</label>
    <type>DateTime</type>
</CustomField>