force-app/main/default/objects/HFS_Job__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <label>Assigned By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>