force-app/main/default/objects/HFS_Job__c/fields/Assigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Time__c</fullName>
    <description>How long the job was in Status = Assigned.</description>
    <formula>NULLVALUE((Accepted__c - Assigned__c)*86400, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time (in seconds)</inlineHelpText>
    <label>Assigned Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>