force-app/main/default/objects/HFS_Job__c/fields/Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_me__c</fullName>
    <formula>IF(HFS_Runner__r.User__c = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me</label>
    <type>Checkbox</type>
</CustomField>