force-app/main/default/objects/HFS_Job__c/fields/Awaiting_Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Pickup_Time__c</fullName>
    <formula>NULLVALUE((Started__c -  Creation__c)*86400,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awaiting Pickup Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>