force-app/main/default/objects/HFS_Job__c/fields/Bag_Putaway__c.field-meta.xml
<CustomField>
    <fullName>Bag_Putaway__c</fullName>
    <label>Bag Putaway</label>
    <type>DateTime</type>
</CustomField>