force-app/main/default/objects/HFS_Job__c/fields/Bags_collected__c.field-meta.xml
<CustomField>
    <fullName>Bags_collected__c</fullName>
    <formula>IF(ISPICKVAL( Job_Type__c , &apos;Bag Transfer&apos;), HFS_Purchase__r.Case__r.Total_Scanned_Bags_of_Guest__c, HFS_Purchase__r.Scanned_Bags__c + HFS_Purchase__r.Bags_in_Storage_Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bags collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>