force-app/main/default/objects/HFS_Job__c/fields/Bags_to_collect__c.field-meta.xml
<CustomField>
    <fullName>Bags_to_collect__c</fullName>
    <formula>IF(ISPICKVAL(Job_Type__c,&apos;Bag Transfer&apos;),HFS_Purchase__r.Case__r.Total_Bags_at_wrong_Collection_Point__c   , HFS_Purchase__r.Remaining_Bags_to_Pickup__c)


/*IF(ISPICKVAL(Job_Type__c,&apos;Bag Transfer&apos;), HFS_Purchase__r.Case__r.Total_Bags_of_the_Guest__c -  HFS_Purchase__r.Case__r.Total_Scanned_Bags_of_Guest__c  , HFS_Purchase__r.Remaining_Bags_to_Pickup__c)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bags to collect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>