force-app/main/default/objects/HFS_Job__c/fields/Brand_Comments__c.field-meta.xml
<CustomField>
    <fullName>Brand_Comments__c</fullName>
    <formula>HFS_Purchase__r.Village_Presence__r.HFS_Brand_comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Comments</label>
    <type>Text</type>
</CustomField>