force-app/main/default/objects/HFS_Job__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <formula>HFS_Purchase__r.Village_Presence__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>