force-app/main/default/objects/HFS_Job__c/fields/Cancel_Job_are_you_sure__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Job_are_you_sure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Job, are you sure?</label>
    <type>Checkbox</type>
</CustomField>