force-app/main/default/objects/HFS_Job__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <label>Cancelled</label>
    <type>DateTime</type>
</CustomField>