force-app/main/default/objects/HFS_Job__c/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <label>Cancelled By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>