force-app/main/default/objects/HFS_Job__c/fields/Creation__c.field-meta.xml
<CustomField>
    <fullName>Creation__c</fullName>
    <formula>HFS_Purchase__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation</label>
    <type>DateTime</type>
</CustomField>