force-app/main/default/objects/HFS_Job__c/fields/Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Creation_Time__c</fullName>
    <description>How long the job was in Status = New.</description>
    <formula>NULLVALUE(IF( Take_job_for_me__c = true,(( Accepted__c  - Creation__c)*86400),((Assigned__c - Creation__c)*86400)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time (in seconds)</inlineHelpText>
    <label>Creation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>