force-app/main/default/objects/HFS_Job__c/fields/Delivered_By__c.field-meta.xml
<CustomField>
    <fullName>Delivered_By__c</fullName>
    <label>Delivered By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>