force-app/main/default/objects/HFS_Job__c/fields/Delivered_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Time__c</fullName>
    <description>How long the job was in Status = Delivered.</description>
    <formula>NULLVALUE((Bag_Putaway__c - Delivered__c)*86400,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time (in seconds)</inlineHelpText>
    <label>Delivered Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>