force-app/main/default/objects/HFS_Job__c/fields/Delivering__c.field-meta.xml
<CustomField>
    <fullName>Delivering__c</fullName>
    <label>Delivering</label>
    <type>DateTime</type>
</CustomField>