force-app/main/default/objects/HFS_Job__c/fields/Delivering_By__c.field-meta.xml
<CustomField>
    <fullName>Delivering_By__c</fullName>
    <label>Delivering By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>