force-app/main/default/objects/HFS_Job__c/fields/Delivering_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Time__c</fullName>
    <description>How long the job was in Status = Delivering</description>
    <formula>NULLVALUE((Delivered__c - Delivering__c )*86400, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time (in seconds)</inlineHelpText>
    <label>Delivering Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>