force-app/main/default/objects/HFS_Job__c/fields/Guest_Arrival_30_minutes__c.field-meta.xml
<CustomField>
    <fullName>Guest_Arrival_30_minutes__c</fullName>
    <formula>IF( HFS_Purchase__r.Case__r.Guest_30_minutes__c ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Arrival 30 minutes</label>
    <type>Checkbox</type>
</CustomField>