force-app/main/default/objects/HFS_Job__c/fields/HFS_Guest_Collection_Point__c.field-meta.xml
<CustomField>
    <fullName>HFS_Guest_Collection_Point__c</fullName>
    <formula>HFS_Purchase__r.Case__r.HFS_Collection_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HFS Guest Collection Point</label>
    <type>Text</type>
</CustomField>