force-app/main/default/objects/HFS_Job__c/fields/HFS_Purchase__c.field-meta.xml
<CustomField>
    <fullName>HFS_Purchase__c</fullName>
    <description>Master detail relationship to Case_Item__c</description>
    <label>HFS Purchase</label>
    <referenceTo>Case_Item__c</referenceTo>
    <relationshipLabel>HFS Jobs</relationshipLabel>
    <relationshipName>HFS_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>