force-app/main/default/objects/HFS_Job__c/fields/Is_Click_Collect__c.field-meta.xml
<CustomField>
    <fullName>Is_Click_Collect__c</fullName>
    <description>Indicates if the parent Case for the Job is of type Click &amp; Collect</description>
    <formula>HFS_Purchase__r.Case__r.HFS_Click_And_Collect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Click &amp; Collect?</label>
    <type>Checkbox</type>
</CustomField>