force-app/main/default/objects/HFS_Job__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <description>It is for collect the status of the job through the collection of bags, since the decisions taken by Runners and Co-ordinators.</description>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Not Accepted</label>
            </value>
            <value>
                <fullName>Delivering</fullName>
            </value>
            <value>
                <fullName>Bags Putaway</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>