force-app/main/default/objects/HFS_Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Pick-up Request</fullName>
                <default>true</default>
                <label>Original Pick-up Request</label>
            </value>
            <value>
                <fullName>Shared Pick-up Request</fullName>
            </value>
            <value>
                <fullName>Leftover Pick-up Request</fullName>
            </value>
            <value>
                <fullName>Bag Transfer</fullName>
            </value>
            <value>
                <fullName>Bag Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>