force-app/main/default/objects/HFS_Job__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>TEXT(HFS_Purchase__r.Village_Presence__r.Unit__r.Unit_GeoLocation__Latitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude</label>
    <type>Text</type>
</CustomField>