force-app/main/default/objects/HFS_Job__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>TEXT(HFS_Purchase__r.Village_Presence__r.Unit__r.Unit_GeoLocation__Longitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <type>Text</type>
</CustomField>