force-app/main/default/objects/HFS_Job__c/fields/Number_Reject__c.field-meta.xml
<CustomField>
    <fullName>Number_Reject__c</fullName>
    <defaultValue>0</defaultValue>
    <description>It is a numeric field with the information of how much time the field was rejected.</description>
    <label>Number Reject</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>