force-app/main/default/objects/HFS_Job__c/fields/Oversized__c.field-meta.xml
<CustomField>
    <fullName>Oversized__c</fullName>
    <formula>IF(HFS_Purchase__r.Oversized_Bags__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oversized</label>
    <type>Checkbox</type>
</CustomField>