force-app/main/default/objects/HFS_Job__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <formula>HFS_Purchase__r.Pickup_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Location</label>
    <type>Text</type>
</CustomField>