force-app/main/default/objects/HFS_Job__c/fields/Reject_Job__c.field-meta.xml
<CustomField>
    <fullName>Reject_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reject Job</label>
    <type>Checkbox</type>
</CustomField>