force-app/main/default/objects/HFS_Job__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <label>Rejected</label>
    <type>DateTime</type>
</CustomField>