force-app/main/default/objects/HFS_Job__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <label>Rejected By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>