force-app/main/default/objects/HFS_Job__c/fields/Start_Job__c.field-meta.xml
<CustomField>
    <fullName>Start_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Job</label>
    <type>Checkbox</type>
</CustomField>