force-app/main/default/objects/HFS_Job__c/fields/Started_By__c.field-meta.xml
<CustomField>
    <fullName>Started_By__c</fullName>
    <label>Started By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>