force-app/main/default/objects/HFS_Job__c/fields/Started_Time__c.field-meta.xml
<CustomField>
    <fullName>Started_Time__c</fullName>
    <description>How long the job was in Status = Started.</description>
    <formula>NULLVALUE((Delivering__c - Started__c)*86400, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time (in seconds)</inlineHelpText>
    <label>Started Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>