force-app/main/default/objects/HFS_Job__c/fields/Take_job_for_me__c.field-meta.xml
<CustomField>
    <fullName>Take_job_for_me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I want the Job</label>
    <type>Checkbox</type>
</CustomField>