force-app/main/default/objects/HFS_Job__c/fields/Time_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Created__c</fullName>
    <formula>NULLVALUE((NOW() - Creation__c)*86400, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>