force-app/main/default/objects/HFS_Job__c/fields/Total_Bags__c.field-meta.xml
<CustomField>
    <fullName>Total_Bags__c</fullName>
    <formula>IF( ISPICKVAL(Job_Type__c,&apos;Bag Transfer&apos;),  HFS_Purchase__r.Case__r.Total_Bags_of_the_Guest__c,HFS_Purchase__r.Total_Bags__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>