force-app/main/default/objects/HFS_Job__c/fields/Total_of_Runners__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Runners__c</fullName>
    <formula>HFS_Purchase__r.Total_of_On_Going_Jobs__c</formula>
    <label>Total of Runners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>