force-app/main/default/objects/HFS_Job__c/recordTypes/Accepted_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Accepted_Jobs</fullName>
    <active>true</active>
    <label>Accepted Jobs</label>
</RecordType>