force-app/main/default/objects/HFS_Job__c/recordTypes/Assigned_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Assigned_Jobs</fullName>
    <active>true</active>
    <label>Assigned Jobs</label>
</RecordType>