force-app/main/default/objects/HFS_Job__c/recordTypes/Cancelled_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Cancelled_Jobs</fullName>
    <active>true</active>
    <label>Cancelled Jobs</label>
</RecordType>