force-app/main/default/objects/HFS_Job__c/recordTypes/Delivered_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Delivered_Jobs</fullName>
    <active>true</active>
    <label>Delivered Jobs</label>
</RecordType>