force-app/main/default/objects/HFS_Job__c/recordTypes/Delivering_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Delivering_Jobs</fullName>
    <active>true</active>
    <label>Delivering Jobs</label>
</RecordType>