force-app/main/default/objects/HFS_Job__c/recordTypes/Finished_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Finished_Jobs</fullName>
    <active>true</active>
    <label>Finished Jobs</label>
</RecordType>