force-app/main/default/objects/HFS_Job__c/recordTypes/New_Job_General.recordType-meta.xml
<RecordType>
    <fullName>New_Job_General</fullName>
    <active>true</active>
    <label>New Job General</label>
</RecordType>