force-app/main/default/objects/HFS_Job__c/recordTypes/Rejected_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Rejected_Jobs</fullName>
    <active>true</active>
    <label>Rejected Jobs</label>
</RecordType>