force-app/main/default/objects/HFS_Job__c/recordTypes/Started_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Started_Jobs</fullName>
    <active>true</active>
    <label>Started Jobs</label>
</RecordType>