force-app/main/default/objects/HFS_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Guest_ID_Code__c</columns>
    <columns>Oversized__c</columns>
    <columns>Pickup_Location__c</columns>
    <columns>Job_Status__c</columns>
    <columns>HFS_Guest_Collection_Point__c</columns>
    <columns>Bags_to_collect__c</columns>
    <columns>Priority_flag__c</columns>
    <columns>Creation__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>HFS_Job__c.New_Job_General</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
    </sharedTo>
</ListView>