force-app/main/default/objects/HFS_Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Guest_ID_Code__c</columns>
    <columns>Oversized__c</columns>
    <columns>Pickup_Location__c</columns>
    <columns>HFS_Runner__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Job_Type__c</columns>
    <columns>HFS_Guest_Collection_Point__c</columns>
    <columns>Bags_to_collect__c</columns>
    <columns>Priority_flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Creation__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today Jobs</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
        <group>Co_ordinator</group>
        <group>FV_HFS_Co_ordinators</group>
        <group>HFS_Owners_Bicester</group>
        <group>HFS_Owners_Fidenza</group>
        <group>HFS_Owners_Ingolstadt</group>
        <group>HFS_Owners_Kildare</group>
        <group>HFS_Owners_La_Vallee</group>
        <group>HFS_Owners_Wertheim</group>
        <group>IV_HFS_Co_ordinators</group>
        <group>KV_HFS_Co_ordinators</group>
        <group>LV_HFS_Co_ordinators</group>
        <group>WV_HFS_Co_ordinators</group>
    </sharedTo>
</ListView>