force-app/main/default/objects/HFS_Job__c/listViews/All_Jobs_LV.listView-meta.xml
<ListView>
    <fullName>All_Jobs_LV</fullName>
    <columns>NAME</columns>
    <columns>Bags_to_collect__c</columns>
    <columns>Creation__c</columns>
    <columns>Guest_ID_Code__c</columns>
    <columns>HFS_Guest_Collection_Point__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Oversized__c</columns>
    <columns>Pickup_Location__c</columns>
    <columns>Priority_flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand_Name__c</field>
        <operation>contains</operation>
        <value>La Vallée</value>
    </filters>
    <label>All Jobs</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
        <group>LV_HFS_Co_ordinators</group>
        <group>Runners_LV</group>
    </sharedTo>
</ListView>