force-app/main/default/objects/HFS_Job__c/listViews/Assigned_Jobs.listView-meta.xml
<ListView>
    <fullName>Assigned_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Guest_ID_Code__c</columns>
    <columns>Oversized__c</columns>
    <columns>Pickup_Location__c</columns>
    <columns>Job_Status__c</columns>
    <columns>HFS_Runner__c</columns>
    <columns>Job_Type__c</columns>
    <columns>HFS_Guest_Collection_Point__c</columns>
    <columns>Bags_to_collect__c</columns>
    <columns>Priority_flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to_me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Job_Status__c</field>
        <operation>equals</operation>
        <value>Assigned</value>
    </filters>
    <filters>
        <field>Creation__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Is_Click_Collect__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Assigned Jobs</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
        <group>Runners</group>
        <group>Runners_FV</group>
        <group>Runners_IV</group>
        <group>Runners_KV</group>
        <group>Runners_LV</group>
        <group>Runners_WV</group>
    </sharedTo>
</ListView>