force-app/main/default/objects/HFS_Job__c/listViews/Bagdrop_Jobs.listView-meta.xml
<ListView>
    <fullName>Bagdrop_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Guest_ID_Code__c</columns>
    <columns>Oversized__c</columns>
    <columns>Pickup_Location__c</columns>
    <columns>Job_Status__c</columns>
    <columns>HFS_Runner__c</columns>
    <columns>Job_Type__c</columns>
    <columns>HFS_Guest_Collection_Point__c</columns>
    <columns>Bags_to_collect__c</columns>
    <columns>Priority_flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Creation__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Job_Type__c</field>
        <operation>equals</operation>
        <value>Bag Drop</value>
    </filters>
    <filters>
        <field>Job_Status__c</field>
        <operation>notEqual</operation>
        <value>Bags Putaway</value>
    </filters>
    <filters>
        <field>Is_Click_Collect__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Bagdrop Jobs</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
        <group>HFS_Owners_Bicester</group>
        <group>HFS_Owners_Fidenza</group>
        <group>HFS_Owners_Ingolstadt</group>
        <group>HFS_Owners_Kildare</group>
        <group>HFS_Owners_La_Vallee</group>
        <group>HFS_Owners_Wertheim</group>
    </sharedTo>
</ListView>